[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
clap = { version = "4.0", features = ["derive"] }
glob = "0.3.1"
console_engine = "2.6.0"
slowprint = "0.1.0"

[dependencies.mongodb]
version = "2.7.0"
features = ["tokio-sync"]

[dependencies.console]
git = "https://github.com/console-rs/console.git"

